--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -46,3 +46,6 @@
         - if show_population?(@community) 
           %li.nav-item
             = nav_link "Population", "#population"
+        - if @community.show_climate? 
+          %li.nav-item
+            = nav_link "Climate", "#climate"
