--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -10,7 +10,7 @@
         - if @community.show_utilities? 
           %li.nav-item
             = nav_link "Utilities", "#utilities"
-        - if show_operators?(@community)  
+        - if @community.show_operators?  
           %li.nav-item
             = nav_link "Operators", "#operators"
         - if @community.show_rates?    
