--- a/app/views/communities/sections/background/_climate.html.haml
+++ b/app/views/communities/sections/background/_climate.html.haml
@@ -7,6 +7,6 @@
   .col.mb-3
     - if @community.show_heating_degree_days?
       .d-flex.align-items-center.ms-3.mb-3
-        %i.bi.bi-info-circle-fill.text-aedg-navy{ data: { controller: 'tooltip', bs_toggle: 'tooltip' }, title: 'Heating Degree Days (HDD) measure how much heating is typically needed by comparing outdoor temperatures to a standard threshold over time. For this community, HDD values are based on temperature data from 1987 to 2006.' }
+        %i.bi.bi-info-circle-fill.text-aedg-navy{ data: { controller: 'tooltip', bs_toggle: 'tooltip' }, title: "Heating degree days (HDD), defined in the U.S. as degrees F below 65 multiplied by duration in days, quantifies energy needed to heat a building over a year's time. HDD values are based on temperature data from 1980-2017." }
         %strong.ms-2.mb-0 Heating Degree Days (HDD):
         %span.text-muted.ms-2.mb-0= "#{@community.heating_degree_days}"
