create feature flag model and add if statements to trun off features on the home page and in data explorer. features are set to false and are not displayed regardless since the if statement returns nil. this gives us the ability to turn on features in prod when needed later

--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -22,6 +22,7 @@
       .text-end.text-small.text-muted.mt-2
         Photo Credit: Gwen Holdmann
 
+- if FeatureFlag.enabled?(:show_extra_datasets)
   .row.g-5.mb-5.mx-0
     .col-lg-6
       %h3.fw-semibold.mb-4 Datasets by Theme
