--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -26,12 +26,12 @@
 
 
 .row.g-5.mb-5.mx-0
-  - if FeatureFlag.enabled?(:show_datasets_by_theme)
+  - if FeatureFlag.enabled?(:show_by_theme)
     .col-lg-6
       %h3.fw-semibold.mb-4 Datasets by Theme
       = render 'by_topic'
 
-  - if FeatureFlag.enabled?(:show_featured_datasets)
+  - if FeatureFlag.enabled?(:show_featured)
     .col-lg-6
       %h3.fw-semibold.mb-4 Featured Datasets
       = render partial: 'metadata', collection: @highlighted, as: :metadatum
