remove unnesscary map styles, added map bridge to listen to clicks on right side tabs to update the left side map.  add tracker for marker to remove when switching layers, add popup tooltip to stay for 7 secs. add show marker so it can be turned on and off instead of persiting on the map amoung other layers, add all layers to map as options for buttons on top of map. add functionality to click the datatable tabs for house and senete districts and show the lay in the map accordingly. The buttons on the top of the map can chanmge the layer without changing the datatables view if we need to see house map with sentne datatable. remove distric badges since info in the datatable. decrease the size of the tabs for better UI palcement., removed container around nav bar to remove bug

--- a/app/views/communities/sections/background/legislative_districts/_district_badge_group.html.haml
+++ b/app/views/communities/sections/background/legislative_districts/_district_badge_group.html.haml
@@ -3,13 +3,15 @@
 -#   items: enumerable
 -#   color: Bootstrap contextual class (e.g., 'success', 'primary', etc.)
 
-.d-flex.bg-body-secondary.rounded.p-3.mb-3.align-items-start
-  .me-2
-    %strong.text-muted.text-nowrap
-      = label
-      = " (#{items.count})"
+-# NOTE: Removed since datatables show same information but before, the was changes to the UI look in the code below
 
-  .d-flex.flex-wrap.gap-2.border-start.border-2.border-text-muted.ps-2
-    - items.each do |item|
-      .badge.px-3.py-2.rounded-pill{ class: "text-bg-#{color}" }
-        = yield item
+-# .d-flex.rounded.p-1.mb-1.align-items-start
+-#   .me-2
+-#     %strong.text-muted.text-nowrap
+-#       = label
+-#       = " (#{items.count})"
+
+-#   .d-flex.flex-wrap.gap-2.border-start.border-2.border-text-muted.ps-2
+-#     - items.each do |item|
+-#       .badge.rounded-pill{ class: "text-bg-#{color}" }
+-#         = yield item
