--- a/app/views/communities/sections/background/_legislative_districts.html.haml
+++ b/app/views/communities/sections/background/_legislative_districts.html.haml
@@ -6,59 +6,22 @@
 
 = render "communities/sections/background/legislative_districts/district_overview"
 
-/ Two-Column Layout: Map Left, Tabs Right
-.row.g-4.mt-4
-  / Left Column: Map
-  .col-12.col-xl-6
-    - if @community.show_legislative_districts?
-      #districtsMapWrapper.tab-pane.fade.show.active{
-        data: mapbox_api_data({
-          maps_map_center_value: [@community.longitude, @community.latitude],
-          maps_default_layer_url_value: house_districts_community_maps_path(@community, format: :json)
-        })
-      }
-        %h5.fw-semibold.text-muted.mb-3 Legislative Districts Map
-        .d-flex.gap-2.mb-3.align-items-center
-          - if @community.show_house_districts?
-            %button.btn.btn-outline-primary.active{
-              data: {
-                action: "click->maps#selectLayer",
-                url: house_districts_community_maps_path(@community, format: :json),
-                color: "#088",
-                outline_color: "#05505e"
-              }
-            } House Districts
-          - if @community.show_senate_districts?
-            %button.btn.btn-outline-primary{
-              data: {
-                action: "click->maps#selectLayer",
-                url: senate_districts_community_maps_path(@community, format: :json),
-                color: "#e67e22",
-                outline_color: "#a84300"
-              }
-            } Senate Districts
+.nav.nav-tabs.mb-2{ data: { controller: "maps-bridge" } }
+  - if @community.show_house_districts?
+    %li.nav-item
+      = link_to "#HouseDistrictData", class: "nav-link active", data: { bs_toggle: "tab", layer_url: house_districts_community_maps_path(@community, format: :json), color: "#088", outline_color: "#05505e"} do
+        %i.bi.bi-table.me-1 
+          House District Data
+  - if @community.show_senate_districts?
+    %li.nav-item
+      = link_to "#SenateDistrictData", class: "nav-link", data: {bs_toggle: "tab", layer_url: senate_districts_community_maps_path(@community, format: :json), color: "#e67e22", outline_color: "#a84300" } do
+        %i.bi.bi-table.me-1 
+          Senate District Data
 
-        .map.rounded{ data: { maps_target: "map" } }
-
-  / Right Column: Tabs + Data
-  .col-12.col-xl-6
-    .nav.nav-tabs.mb-2
-      - if @community.show_house_districts?  
-        %li.nav-item 
-          = link_to "#HouseDistrictData", class: "nav-link active", data: { bs_toggle: "tab" } do
-            %i.bi.bi-table.me-1
-            House District Data
-      - if @community.show_senate_districts? 
-        %li.nav-item 
-          = link_to "#SenateDistrictData", class: "nav-link", data: { bs_toggle: "tab" } do
-            %i.bi.bi-table.me-1
-            Senate District Data
-
-    .tab-content
-      - if @community.show_house_districts? 
-        #HouseDistrictData.tab-pane.fade.show.active
-          = render "communities/sections/background/legislative_districts/house_district_data"
-
-      - if @community.show_senate_districts? 
-        #SenateDistrictData.tab-pane.fade
-          = render "communities/sections/background/legislative_districts/senate_district_data"
+.tab-content
+  - if @community.show_house_districts? 
+    #HouseDistrictData.tab-pane.fade.show.active
+      = render "communities/sections/background/legislative_districts/house_district_data"
+  - if @community.show_senate_districts? 
+    #SenateDistrictData.tab-pane.fade
+      = render "communities/sections/background/legislative_districts/senate_district_data"
