--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -7,21 +7,44 @@
         .mb-3
           = render "dropdown", communities: @communities, current_community: @community
 
-          -# TODO: Uncomment when the download/print functionality is implemented
-          -# %button.btn.btn-aedg-primary.px-4.py-2 
-          -#   %i.bi.bi-file-earmark-arrow-down.me-1
-          -#   Download Summary
-
-        .flex-grow-1.position-relative#mapbox-area{
+        .flex-grow-1.d-flex.flex-column#mapbox-area{
           data: mapbox_api_data({
             maps_map_center_value: [@community.longitude, @community.latitude],
-            maps_markers_value: [[@community.longitude, @community.latitude]],
-            maps_marker_tooltip_title_value: @community.name
+            maps_markers_value: [[@community.longitude, @community.latitude]],    # 👈 array of [lng, lat]
+            maps_marker_tooltip_title_value: @community.name    
           })
         }
-          %div{ data: { maps_target: "map" },
-                style: "position:absolute; inset:0; width:100%; height:100%;" }
-        
+          / --- Optional layer toggle buttons (above the map) ---
+          .d-flex.gap-2.mb-2.align-items-center
+            %button.btn.btn-outline-primary.btn-sm{
+              data: {
+                  action: "click->maps#showMarker",
+                  "maps-lng-param": @community.longitude,
+                  "maps-lat-param": @community.latitude,
+                  "maps-title-param": @community.name
+                }
+              } Lat Lng
+            %button.btn.btn-outline-primary.btn-sm{
+              data: {
+                action: "click->maps#selectLayer",
+                url: house_districts_community_maps_path(@community, format: :json),
+                color: "#088",
+                outline_color: "#05505e"
+              }
+            } House Districts
+            %button.btn.btn-outline-primary.btn-sm{
+              data: {
+                action: "click->maps#selectLayer",
+                url: senate_districts_community_maps_path(@community, format: :json),
+                color: "#e67e22",
+                outline_color: "#a84300"
+              }
+            } Senate Districts
+
+          / --- Map fills the remaining height below the toolbar
+          .flex-grow-1.position-relative
+            %div{ data: { maps_target: "map" }, style: "position:absolute; inset:0; width:100%; height:100%;" }
+
         -# TODO:: move quicklinks        
         -# .mt-5
         -#   = render 'communities/sections/quick_nav', community: @community
