--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,6 +1,7 @@
-%header.mb-3.mb-sm-5
+%header.mb-sm-3
   %nav.navbar.bg-aedg-navy.navbar-expand-md.p-2
     %a.navbar-brand{ href: root_path }
+      / Logo
       %img{ src: asset_path('main_menu_logo.png'), alt: "Main Menu Logo", width: "125", class: "d-inline-block align-text-top" }
 
     / Menu Toggler
