move quicknav links to dropdown on right side of 2nd navbar. fix look of UX with fuel prices dropdown, it doesn't appear if thers only one data source for teh chart

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -287,3 +287,7 @@
   color: darken($primary, 25%);
   border-radius: 0.25rem;
 }
+
+.anchor-offset {
+  scroll-margin-top: 8vh; /* position anchor below nav  */
+}
