--- a/app/views/communities/sections/background/_climate.html.haml
+++ b/app/views/communities/sections/background/_climate.html.haml
@@ -1,6 +1,6 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-thermometer-snow.me-2.fs-4
-  %h4#climate.mb-0.me-3.py-3 Climate
+  %h4#climate.mb-0.me-3.py-3.anchor-offset Climate
   %hr.flex-grow-1.mt-1.mb-0
 
 .row
