--- a/app/views/communities/sections/background/_legislative_districts.html.haml
+++ b/app/views/communities/sections/background/_legislative_districts.html.haml
@@ -1,7 +1,7 @@
 / Title & Overview
 .d-flex.align-items-center.mb-3
   %i.bi.bi-map.me-2.fs-4
-  %h4#legislative-districts.mb-0.me-3.py-3 Legislative Districts
+  %h4#legislative-districts.mb-0.me-3.py-3.anchor-offset Legislative Districts
   %hr.flex-grow-1.mt-1.mb-0
 
 = render "communities/sections/background/legislative_districts/district_overview"
