--- a/app/views/communities/sections/electricity/_rates.html.haml
+++ b/app/views/communities/sections/electricity/_rates.html.haml
@@ -1,7 +1,7 @@
 - if (latest_rate = @community.electric_rates.most_recent.first)
   .d-flex.align-items-center.mb-3
     %i.bi.bi-coin.me-2.fs-4
-    %h4#rates.mb-0.me-3.py-3 Rates
+    %h4#rates.mb-0.me-3.py-3.anchor-offset Rates
     %hr.flex-grow-1.mt-1.mb-0
 
   .row.g-3
