--- a/app/views/communities/sections/electricity/_utilities.html.haml
+++ b/app/views/communities/sections/electricity/_utilities.html.haml
@@ -1,6 +1,6 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-buildings.me-2.fs-4
-  %h4#utilities.mb-0.me-3.py-3 Utilities
+  %h4#utilities.mb-0.me-3.py-3.anchor-offset Utilities
   %hr.flex-grow-1.mt-1.mb-0
 
 .row.g-3
