--- a/app/views/communities/sections/background/_population.html.haml
+++ b/app/views/communities/sections/background/_population.html.haml
@@ -3,7 +3,7 @@
 
 .d-flex.align-items-center.mb-3
   %i.bi.bi-people-fill.me-2.fs-4
-  %h4#population.mb-0.me-3.py-3 Population
+  %h4#population.mb-0.me-3.py-3.anchor-offset Population
   %hr.flex-grow-1.mt-1.mb-0
 %ul.nav.nav-tabs
   - if employment_present
