--- a/app/views/communities/sections/background/school_districts/_district_overview.html.haml
+++ b/app/views/communities/sections/background/school_districts/_district_overview.html.haml
@@ -1,6 +1,6 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-mortarboard.me-2.fs-4
-  %h4#school-districts.mb-0.me-3.py-3 School Districts
+  %h4#school-districts.mb-0.me-3.py-3.anchor-offset School Districts
   %hr.flex-grow-1.mt-1.mb-0
 
 %ul.ms-3
