--- a/app/views/communities/sections/background/_legislative_districts.html.haml
+++ b/app/views/communities/sections/background/_legislative_districts.html.haml
@@ -14,26 +14,58 @@
 
   = render "communities/sections/background/legislative_districts/district_overview"
 
-  .nav.nav-tabs.mb-2
+
+  / Map Layers header + caption
+  %h5.fw-semibold.mb-1 Choose Districts to Display on Map
+
+  / Map layer buttons (wrap on small screens)
+  .d-flex.flex-wrap.gap-2.mb-2
+    %button.btn.btn-outline-secondary.btn-sm.d-inline-flex.align-items-center.gap-1{
+      data: {
+        action: "click->maps#selectLayer",
+        layer_url: house_districts_community_maps_path(@community, format: :json),
+        color: "#088",
+        outline_color: "#05505e",
+        clear: true
+      }
+    }
+      %i.bi.bi-house-fill
+      %span.text-nowrap House Districts Map
+
+    %button.btn.btn-outline-secondary.btn-sm.d-inline-flex.align-items-center.gap-1{
+      data: {
+        action: "click->maps#selectLayer",
+        layer_url: senate_districts_community_maps_path(@community, format: :json),
+        color: "#e67e22",
+        outline_color: "#a84300",
+        clear: true
+      }
+    }
+      %i.bi.bi-bank
+      %span.text-nowrap Senate Districts Map
+
+  / Datatable Tabs
+  %br
+  %ul.nav.nav-tabs.mb-2(role="tablist")
     - if @community.show_house_districts?
       %li.nav-item
         = link_to "#HouseDistrictData",
-          class: "nav-link active",
-          data: {bs_toggle: "tab", layer_url: house_districts_community_maps_path(@community, format: :json), color: "#088", outline_color: "#05505e" } do
-          %i.bi.bi-table.me-1
+          class: "nav-link active d-inline-flex align-items-center gap-1",
+          data: { bs_toggle: "tab" }, role: "tab" do
+          %i.bi.bi-table
           House District Data
     - if @community.show_senate_districts?
       %li.nav-item
         = link_to "#SenateDistrictData",
-          class: "nav-link",
-          data: { bs_toggle: "tab", layer_url: senate_districts_community_maps_path(@community, format: :json), color: "#e67e22", outline_color: "#a84300" } do
-          %i.bi.bi-table.me-1
+          class: "nav-link d-inline-flex align-items-center gap-1",
+          data: { bs_toggle: "tab" }, role: "tab" do
+          %i.bi.bi-table
           Senate District Data
 
   .tab-content
     - if @community.show_house_districts?
-      #HouseDistrictData.tab-pane.fade.show.active
+      #HouseDistrictData.tab-pane.fade.show.active(role="tabpanel")
         = render "communities/sections/background/legislative_districts/house_district_data"
     - if @community.show_senate_districts?
-      #SenateDistrictData.tab-pane.fade
+      #SenateDistrictData.tab-pane.fade(role="tabpanel")
         = render "communities/sections/background/legislative_districts/senate_district_data"
