--- a/app/views/grids/sections/_communities.html.haml
+++ b/app/views/grids/sections/_communities.html.haml
@@ -4,6 +4,11 @@
 
 .container.mb-3.my-5.mx-3.mx-md-5.mt-3
   .row.g-3
+    %p
+      The
+      %strong= @grid.name
+      = " currently serves the following #{pluralize(@grid.communities.count, 'community')}:"
+  .row.g-3
     - cols.each do |group|
       .col-12.col-md-3
         %ul.list-group.list-group-flush.small
