Determine if grid is active or inactive and display appropriate text.

--- a/app/views/grids/show.html.haml
+++ b/app/views/grids/show.html.haml
@@ -24,6 +24,12 @@
           %i.bi.bi-geo-alt-fill.text-primary
           = @grid.name
 
+        - if @grid.active?
+          %span.badge.rounded-pill.bg-success Active
+        - else
+          %span.badge.rounded-pill.bg-secondary
+            = "Inactive (#{@grid.inactive_year})"
+
       - section_order = []
       - section_order << 'communities'
       - section_order << 'electricity' if @grid.show_electricity_section?
