Refactor Grid show view to use new map layout

--- a/app/views/grids/sections/_quick_nav.html.haml
+++ b/app/views/grids/sections/_quick_nav.html.haml
@@ -1,20 +1,19 @@
-#quick-nav.m-3
-  .border-bottom.pb-1
-    %h6.text-muted.fw-semibold On This Page
-  .row.row-cols-1.row-cols-sm-3.row-cols-md-1.g-2
-    .col
-      %ul.nav.flex-column
-        - if @grid.communities.exists?
-          %li.nav-item.mt-3.text-uppercase.text-muted.small
-            = nav_link "Communities", "#communities", parent_section: true
-    .col
-      %ul.nav.flex-column
-        - if @grid.show_electricity_section?
-          %li.nav-item.mt-3.text-uppercase.text-muted.small
-            = nav_link "Electricity", "#electricity", parent_section: true
-        - if @grid.show_production?
-          %li.nav-item
-            = nav_link "Production", "#production"
-        - if @grid.show_capacity?
-          %li.nav-item
-            = nav_link "Capacity", "#capacity"
+#quick-nav.m-1
+  .dropdown
+    %button.btn.btn-outline-secondary.dropdown-toggle.w-100{
+      type: "button",
+      id: "quickNavDropdown",
+      "data-bs-toggle" => "dropdown",
+      "aria-expanded" => "false"
+    }
+      Select Section
+    %ul.dropdown-menu.w-100.p-1{ "aria-labelledby" => "quickNavDropdown" }
+      // Electricity Section
+      - if @grid.communities.exists?
+        %li= nav_link "Communities", "#communities", parent_section: true
+      - if @grid.show_electricity_section?
+        %li= nav_link "Electricity", "#electricity", parent_section: true
+      - if @grid.show_production?
+        %li= nav_link "Production", "#production"
+      - if @grid.show_capacity?
+        %li= nav_link "Capacity", "#capacity"
